--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@next"></script> -->
-    <title>Vite App</title>
+    <title>vue3-sketch-ruler</title>
   </head>
 
   <body>
