--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/example/main.js"></script>
 
   </body>
 
