--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vue3-sketch-ruler</title>
+    <meta
+      name="description"
+      content="这是一个基于Vue 3的测量工具尺组件，用于图形界面中的尺寸测量和标注，适用于设计师和开发者的协作环境。"
+    />
+    <meta
+      name="keywords"
+      content="vue3-sketch-ruler, Vue 3, 测量工具, 尺子组件, 图形界面设计, 尺寸测量, 标注工具, 开发者工具, 设计师工具"
+    />
   </head>
 
   <body>
     <div id="app"></div>
     <script type="module" src="/example/main.js"></script>
-
   </body>
-
 </html>
