--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       name="keywords"
       content="vue3-sketch-ruler, Vue 3, 测量工具, 尺子组件, 图形界面设计, 尺寸测量, 标注工具, 开发者工具, 设计师工具"
     />
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+        font-family: sans-serif;
+
+        * {
+          box-sizing: border-box;
+          user-select: none;
+        }
+      }
+    </style>
   </head>
 
   <body>
